--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div class="content">
                     <h1>
-                        I received a job offer mid-course, and the subjects i learned were current, if not more so, in the company i joined. I honestly feel i got every pennys worth
+                        I received a job offer mid-course, and the subjects i learned were current, if not more so, in the company i joined. I honestly feel i got every pennys worth.
                     </h1>
                     <p>
                         "I was an EMT for many years before i joined the bootcamp i've been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, i've successfully switched careers, working as a Software Engineer at a VR startup."
@@ -32,17 +32,17 @@
                 <div class="img-name">
                     <img src="images/image-jonathan.jpg" alt="">
                     <div class="name">
-                        <span>Daniel Clifford</span>
+                        <span>Jonathan Walters</span>
                         <span>Verified graduate</span>
                     </div>
                 </div>
 
                 <div class="content">
                     <h1>
-                        I received a job offer mid-course, and the subjects i learned were current, if not more so, in the company i joined. I honestly feel i got every pennys worth
+                        The team was very supportive and kept me motivated
                     </h1>
                     <p>
-                        "I was an EMT for many years before i joined the bootcamp i've been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, i've successfully switched careers, working as a Software Engineer at a VR startup."
+                        "I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investment i've made in myself."
                     </p>
                 </div>
             </div>
@@ -51,17 +51,17 @@
                 <div class="img-name">
                     <img src="images/image-jeanette.jpg" alt="">
                     <div class="name">
-                        <span>Daniel Clifford</span>
+                        <span>Jeanette Harmon</span>
                         <span>Verified graduate</span>
                     </div>
                 </div>
 
                 <div class="content">
                     <h1>
-                        I received a job offer mid-course, and the subjects i learned were current, if not more so, in the company i joined. I honestly feel i got every pennys worth
+                        An overall wonderful and rewarding experience
                     </h1>
                     <p>
-                        "I was an EMT for many years before i joined the bootcamp i've been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, i've successfully switched careers, working as a Software Engineer at a VR startup."
+                        "Thank you for the wonderful experience! I now have a job i really enjoy, and make a good living while doing something i love."
                     </p>
                 </div>
             </div>
@@ -70,17 +70,17 @@
                 <div class="img-name">
                     <img src="images/image-patrick.jpg" alt="">
                     <div class="name">
-                        <span>Daniel Clifford</span>
+                        <span>Patrick Abrams</span>
                         <span>Verified graduate</span>
                     </div>
                 </div>
 
                 <div class="content">
                     <h1>
-                        I received a job offer mid-course, and the subjects i learned were current, if not more so, in the company i joined. I honestly feel i got every pennys worth
+                        Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.
                     </h1>
                     <p>
-                        "I was an EMT for many years before i joined the bootcamp i've been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, i've successfully switched careers, working as a Software Engineer at a VR startup."
+                        "The staff seemed genuinely concerned about my progress which i find really refreshing. The program gave me the confidence neccessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people."
                     </p>
                 </div>
             </div>
@@ -89,30 +89,27 @@
                 <div class="img-name">
                     <img src="images/image-kira.jpg" alt="">
                     <div class="name">
-                        <span>Daniel Clifford</span>
+                        <span>Kira Whittle</span>
                         <span>Verified graduate</span>
                     </div>
                 </div>
 
                 <div class="content">
                     <h1>
-                        I received a job offer mid-course, and the subjects i learned were current, if not more so, in the company i joined. I honestly feel i got every pennys worth
+                         Such a life-changing experience. Highly recommended!
                     </h1>
                     <p>
-                        "I was an EMT for many years before i joined the bootcamp i've been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, i've successfully switched careers, working as a Software Engineer at a VR startup."
+                        "Before joining the bootcamp, I've never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and i never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, i've often referred to it during interviews as an example of my development experience. It certainly helped me land a job as a full-stack developer after recieving multiple offers. 100% recommended!"
                     </p>
                 </div>
             </div>
         </div>
+
+        <footer>
+            <p>A frontend mentor challenge.</p>
+            <p>Built with 💖 by teeCodes</p>
+        </footer>
     </section>
 
-
-    <!-- <div class="grid-container">
-      <div class="item item1">Item 1</div>
-      <div class="item item2">Item 2</div>
-      <div class="item item3">Item 3</div>
-      <div class="item item4">Item 4</div>
-      <div class="item item5">Item 5</div>
-    </div> -->
   </body>
 </html>
