used border radius on the images in each testimonial card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="cards">
         <div class="card item1 violet">
           <div class="img-name">
-            <img class="white-circle" src="images/image-daniel.jpg" alt="" />
+            <img class="white-circle img" src="images/image-daniel.jpg" alt="" />
             <div class="name">
               <span>Daniel Clifford</span>
               <span>Verified graduate</span>
@@ -44,7 +44,7 @@
 
         <div class="card item2 grayish-blue">
           <div class="img-name">
-            <img src="images/image-jonathan.jpg" alt="" />
+            <img class="img" src="images/image-jonathan.jpg" alt="" />
             <div class="name">
               <span>Jonathan Walters</span>
               <span>Verified graduate</span>
@@ -63,7 +63,7 @@
 
         <div class="card item3 white">
           <div class="img-name">
-            <img src="images/image-jeanette.jpg" alt="" />
+            <img class="img" src="images/image-jeanette.jpg" alt="" />
             <div class="name">
               <span>Jeanette Harmon</span>
               <span>Verified graduate</span>
@@ -81,7 +81,7 @@
 
         <div class="card item4 blackish-blue">
           <div class="img-name">
-            <img class="violet-circle" src="images/image-patrick.jpg" alt="" />
+            <img class="violet-circle img" src="images/image-patrick.jpg" alt="" />
             <div class="name">
               <span>Patrick Abrams</span>
               <span>Verified graduate</span>
@@ -107,7 +107,7 @@
 
         <div class="card item5 white">
           <div class="img-name">
-            <img src="images/image-kira.jpg" alt="" />
+            <img class="img" src="images/image-kira.jpg" alt="" />
             <div class="name">
               <span>Kira Whittle</span>
               <span>Verified graduate</span>
