--- a/index.html
+++ b/index.html
@@ -7,139 +7,182 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <section>
-      <div class="cards">
-        <div class="card item1 violet">
-          <div class="img-name">
-            <img class="white-circle img" src="images/image-daniel.jpg" alt="" />
-            <div class="name">
-              <span>Daniel Clifford</span>
-              <span>Verified graduate</span>
+    <main>
+      <section class="testimonials">
+        <div class="cards">
+          <!-- card 1 -->
+          <article class="card item1 violet">
+            <header class="img-name">
+              <img
+                class="white-circle img"
+                src="images/image-daniel.jpg"
+                alt="Daniel Clifford's image"
+              />
+
+              <div class="name-status">
+                <span class="name">Daniel Clifford</span>
+                <span class="status">Verified graduate</span>
+              </div>
+
+              <img
+                class="quote-img"
+                src="images/bg-pattern-quotation.svg"
+                alt="Decorative quote image"
+              />
+            </header>
+
+            <div class="content">
+              <h2 class="title">
+                I received a job offer mid-course, and the subjects i learned
+                were current, if not more so, in the company i joined. I
+                honestly feel i got every pennys worth.
+              </h2>
+
+              <p class="description">
+                "I was an EMT for many years before i joined the bootcamp i've
+                been looking to make a transition and have heard some people who
+                had an amazing experience here. I signed up for the free intro
+                course and found it incredibly fun! I enrolled shortly
+                thereafter. The next 12 weeks was the best - and most grueling -
+                time of my life. Since completing the course, i've successfully
+                switched careers, working as a Software Engineer at a VR
+                startup."
+              </p>
             </div>
+          </article>
 
-            <img
-              class="quote-img"
-              src="images/bg-pattern-quotation.svg"
-              alt=""
-            />
-          </div>
+          <!-- card 2 -->
+          <article class="card item2 grayish-blue">
+            <header class="img-name">
+              <img
+                class="img"
+                src="images/image-jonathan.jpg"
+                alt="Jonathan Walters' image"
+              />
 
-          <div class="content">
-            <h1 class="h1">
-              I received a job offer mid-course, and the subjects i learned were
-              current, if not more so, in the company i joined. I honestly feel
-              i got every pennys worth.
-            </h1>
-            <p>
-              "I was an EMT for many years before i joined the bootcamp i've
-              been looking to make a transition and have heard some people who
-              had an amazing experience here. I signed up for the free intro
-              course and found it incredibly fun! I enrolled shortly thereafter.
-              The next 12 weeks was the best - and most grueling - time of my
-              life. Since completing the course, i've successfully switched
-              careers, working as a Software Engineer at a VR startup."
-            </p>
-          </div>
+              <div class="name-status">
+                <span class="name">Jonathan Walters</span>
+                <span class="status">Verified graduate</span>
+              </div>
+            </header>
+
+            <div class="content">
+              <h2 class="title">
+                The team was very supportive and kept me motivated
+              </h2>
+
+              <p class="description">
+                "I started as a total newbie with virtually no coding skills. I
+                now work as a mobile engineer for a big company. This was one of
+                the best investment i've made in myself."
+              </p>
+            </div>
+          </article>
+
+          <!-- card 3 -->
+          <article class="card item3 white">
+            <header class="img-name">
+              <img
+                class="img"
+                src="images/image-jeanette.jpg"
+                alt="Jeanette Harmon's image"
+              />
+
+              <div class="name-status">
+                <span class="name">Jeanette Harmon</span>
+                <span class="status">Verified graduate</span>
+              </div>
+            </header>
+
+            <div class="content">
+              <h2 class="title">
+                An overall wonderful and rewarding experience
+              </h2>
+
+              <p class="description">
+                "Thank you for the wonderful experience! I now have a job i
+                really enjoy, and make a good living while doing something i
+                love."
+              </p>
+            </div>
+          </article>
+
+          <!-- card 4 -->
+          <article class="card item4 blackish-blue">
+            <header class="img-name">
+              <img
+                class="violet-circle img"
+                src="images/image-patrick.jpg"
+                alt="Patrick Abrams image"
+              />
+
+              <div class="name-status">
+                <span class="name">Patrick Abrams</span>
+                <span class="status">Verified graduate</span>
+              </div>
+            </header>
+
+            <div class="content">
+              <h2 class="title">
+                Awesome teaching support from TAs who did the bootcamp
+                themselves. Getting guidance from them and learning from their
+                experiences was easy.
+              </h2>
+
+              <p class="description">
+                "The staff seemed genuinely concerned about my progress which i
+                find really refreshing. The program gave me the confidence
+                neccessary to be able to go out in the world and present myself
+                as a capable junior developer. The standard is above the rest.
+                You will get the personal attention you need from an incredible
+                community of smart and amazing people."
+              </p>
+            </div>
+          </article>
+
+          <!-- card 5 -->
+          <article class="card item5 white">
+            <header class="img-name">
+              <img
+                class="img"
+                src="images/image-kira.jpg"
+                alt="Kira Whittle's image"
+              />
+
+              <div class="name-status">
+                <span class="name">Kira Whittle</span>
+                <span class="status">Verified graduate</span>
+              </div>
+            </header>
+
+            <div class="content">
+              <h2 class="title">
+                Such a life-changing experience. Highly recommended!
+              </h2>
+
+              <p class="description">
+                "Before joining the bootcamp, I've never written a line of code.
+                I needed some structure from professionals who can help me learn
+                programming step by step. I was encouraged to enroll by a former
+                student who can only say wonderful things about the program. The
+                entire curriculum and staff did not disappoint. They were very
+                hands-on and i never had to wait long for assistance. The agile
+                team project, in particular, was outstanding. It took my
+                learning to the next level in a way that no tutorial could ever
+                have. In fact, i've often referred to it during interviews as an
+                example of my development experience. It certainly helped me
+                land a job as a full-stack developer after recieving multiple
+                offers. 100% recommended!"
+              </p>
+            </div>
+          </article>
         </div>
 
-        <div class="card item2 grayish-blue">
-          <div class="img-name">
-            <img class="img" src="images/image-jonathan.jpg" alt="" />
-            <div class="name">
-              <span>Jonathan Walters</span>
-              <span>Verified graduate</span>
-            </div>
-          </div>
-
-          <div class="content">
-            <h1>The team was very supportive and kept me motivated</h1>
-            <p>
-              "I started as a total newbie with virtually no coding skills. I
-              now work as a mobile engineer for a big company. This was one of
-              the best investment i've made in myself."
-            </p>
-          </div>
-        </div>
-
-        <div class="card item3 white">
-          <div class="img-name">
-            <img class="img" src="images/image-jeanette.jpg" alt="" />
-            <div class="name">
-              <span>Jeanette Harmon</span>
-              <span>Verified graduate</span>
-            </div>
-          </div>
-
-          <div class="content">
-            <h1>An overall wonderful and rewarding experience</h1>
-            <p>
-              "Thank you for the wonderful experience! I now have a job i really
-              enjoy, and make a good living while doing something i love."
-            </p>
-          </div>
-        </div>
-
-        <div class="card item4 blackish-blue">
-          <div class="img-name">
-            <img class="violet-circle img" src="images/image-patrick.jpg" alt="" />
-            <div class="name">
-              <span>Patrick Abrams</span>
-              <span>Verified graduate</span>
-            </div>
-          </div>
-
-          <div class="content">
-            <h1>
-              Awesome teaching support from TAs who did the bootcamp themselves.
-              Getting guidance from them and learning from their experiences was
-              easy.
-            </h1>
-            <p>
-              "The staff seemed genuinely concerned about my progress which i
-              find really refreshing. The program gave me the confidence
-              neccessary to be able to go out in the world and present myself as
-              a capable junior developer. The standard is above the rest. You
-              will get the personal attention you need from an incredible
-              community of smart and amazing people."
-            </p>
-          </div>
-        </div>
-
-        <div class="card item5 white">
-          <div class="img-name">
-            <img class="img" src="images/image-kira.jpg" alt="" />
-            <div class="name">
-              <span>Kira Whittle</span>
-              <span>Verified graduate</span>
-            </div>
-          </div>
-
-          <div class="content">
-            <h1>Such a life-changing experience. Highly recommended!</h1>
-            <p>
-              "Before joining the bootcamp, I've never written a line of code. I
-              needed some structure from professionals who can help me learn
-              programming step by step. I was encouraged to enroll by a former
-              student who can only say wonderful things about the program. The
-              entire curriculum and staff did not disappoint. They were very
-              hands-on and i never had to wait long for assistance. The agile
-              team project, in particular, was outstanding. It took my learning
-              to the next level in a way that no tutorial could ever have. In
-              fact, i've often referred to it during interviews as an example of
-              my development experience. It certainly helped me land a job as a
-              full-stack developer after recieving multiple offers. 100%
-              recommended!"
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <footer>
-        <p>A frontend mentor challenge.</p>
-        <p>Built with 💖 by teeCodes</p>
-      </footer>
-    </section>
-
-
+        <footer>
+          <p>A frontend mentor challenge.</p>
+          <p>Built with 💖 by teeCodes</p>
+        </footer>
+      </section>
+    </main>
   </body>
 </html>
